Implement comprehensive API test collections for Supermall, enhancing user authentication, address management, and favorite functionalities
- Introduced new Postman collections for Supermall Auth, User Address, User Favorite, and User Profile APIs, providing structured testing for user-related functionalities.
- Deleted the obsolete Supermall Auth API tests collection to streamline test organization.
- Enhanced user authentication tests to validate registration, login, logout, and username availability checks.
- Implemented user address management tests, including creation, updating, deletion, and retrieval of addresses.
- Added tests for user favorites, covering adding and removing favorite products.
- Updated the UserProfile API tests to ensure proper retrieval and management of user profiles.
- Refactored existing code to improve consistency and maintainability, including changes to ID types from Long to Integer across various DTOs.

These changes significantly improve the testing framework and ensure robust coverage of user-related functionalities in the Supermall e-commerce backend.